@@ -1,3 +1,7 @@
+2005-09-20  Alan Modra  <amodra@bigpond.net.au>
+
+	* elflink.c (_bfd_elf_merge_symbol): Simplify.
+
 2005-09-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (ppc_build_one_stub): Replace assertion that long
